Fix mobile TODOs: hang up button on mobile missing, can't start call from mobile & chat box bottom of screen (need to scroll down).

--- a/client/src/Lobby/lobby.scss
+++ b/client/src/Lobby/lobby.scss
@@ -4,8 +4,8 @@
   grid-template-rows: 1fr;
   align-items: center;
   justify-items: center;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background-color: #eee;
 }
 
