--- a/client/src/Room/room.scss
+++ b/client/src/Room/room.scss
@@ -13,8 +13,8 @@ $videoContainerBackgroundColor: #3c3f41;
 
 #room-root {
   display: grid;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   grid-template-rows: $headerHeight $attendeesHeight 1fr;
 
   #header {
@@ -102,6 +102,7 @@ $videoContainerBackgroundColor: #3c3f41;
     bottom: $spacing;
     left: 50%;
     transform: translateX(-50%);
+    z-index: $foregroundZIndex;
   }
 
   &:not(.call-active) {
